Fixed rig display on mobile.

--- a/Static/MTV.css
+++ b/Static/MTV.css
@@ -111,7 +111,7 @@ width:1200px;
 margin:0 auto;
 }
 
-#M1078 {
+#M1078 img {
 width:619px!important
 }
 
@@ -509,9 +509,8 @@ font-size:350%;
 line-height:130%;
 zoom:.3;
 }
-#box {
-    top: 113px;
-    left: 335px;
+#M1083 img {
+
 }
 }
 
